EXTRA_DIST = \
	COPYING \
	multi_array.original \
	multi_array/view.original \
	multi_array/multi_array_ref.original \
	multi_array/subarray.original

noinst_HEADERS = \
	multi_array.hpp \
	multi_array/algorithm.hpp \
	multi_array/collection_concept.hpp \
	multi_array/copy_array.hpp \
	multi_array/extent_range.hpp \
	multi_array/index_range.hpp \
	multi_array/multi_array_ref.hpp \
	multi_array/range_list.hpp \
	multi_array/subarray.hpp \
	multi_array/types.hpp \
	multi_array/base.hpp \
	multi_array/concept_checks.hpp \
	multi_array/extent_gen.hpp \
	multi_array/index_gen.hpp \
	multi_array/iterator.hpp \
	multi_array/storage_order.hpp \
	multi_array/view.hpp

