EXTRA_DIST = \
	COPYING

noinst_HEADERS = \
	ArgException.h \
	ArgTraits.h \
	CmdLineInterface.h \
	Constraint.h \
	DocBookOutput.h \
	IgnoreRestVisitor.h \
	MultiSwitchArg.h \
	StandardTraits.h \
	SwitchArg.h \
	UnlabeledValueArg.h \
	ValuesConstraint.h \
	Visitor.h \
	ZshCompletionOutput.h \
	Arg.h \
	CmdLine.h \
	CmdLineOutput.h \
	HelpVisitor.h \
	MultiArg.h \
	OptionalUnlabeledTracker.h \
	StdOutput.h \
	UnlabeledMultiArg.h \
	ValueArg.h \
	VersionVisitor.h \
	XorHandler.h
